2002-08-01	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Clean $(PROJECT_RELEASE).

2002-07-22	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* acinclude.m4: Add test "$multilib" != "yes".
	* config-ml.in: Remove.

2002-07-22	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* acinclude.m4: Cleanups.
	* configure.ac: Build ${srcdir}/../../cpukit/ as ./exec/ instead of
	${srcdir}/exec/.
	Further adaptations to autoconf >= 2.50.

2002-07-05	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* acinclude.m4: New.
	* Makefile.am: Remove tar-installation. 
	Prepend @exec@ to SUBDIRS.
	* configure.ac: Switch to AC_CONFIG_SRCDIR([optman]).
	Add RTEMS_ENABLE_MULTIPROCESSING.
	Add RTEMS_CONFIG_SUBDIR([exec]...).

2002-06-25	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove librpc.

2002-06-25	Joel Sherrill <joel@OARcorp.com>

	* Per PR233, moved librpc to exec.
	* configure.ac, wrapup/Makefile.am: Modified.
	* librpc, librpc/ChangeLog: Removed.

2002-05-18	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove CONFIG_SUBDIRS libblock, libfs.

2002-05-15	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove lib.

2002-05-14	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* config-ml.in: Take out arm and sh variants RTEMS does not support.

2002-03-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac:
	AC_INIT(package,_RTEMS_VERSION,_RTEMS_BUGS).
	AM_INIT_AUTOMAKE([no-define foreign 1.6]).
	* Makefile.am: Remove AUTOMAKE_OPTIONS.

2002-02-28	Victor V. Vengerov <vvv@oktet.ru>

	* DOS filesystem including FAT12, FAT16, and FAT32 support submitted.
	* configure.ac: Modified to reflect addition.

2002-01-02	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Add AC_CONFIG_SUBDIRS(optman). Remove
	AC_CONFIG_COMMANDS.

2001-12-18	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* config-ml.in: New file. Imported from gcc and modified for RTEMS.

2001-10-16	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
