@@ -1,3 +1,12 @@
+2002-08-09	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
+
+	* Makefile.am: Create make/@RTEMS_BSP@.cache.
+	Handle make/custom/*.cfgs.
+	Create make/custom/default.cfg.
+	* configure.ac: Add creation of make/custon/*.cfg.
+	Create make/${RTEMS_BSP}.cache.
+	Read make/${RTEMS_BSP}.cache
+
 2002-08-01	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
 
 	* Makefile.am: Clean $(PROJECT_RELEASE).
